<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/black_stroke">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/earnings_icons"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:gravity="right"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/your_earnings"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="40dp"
                        android:textSize="15sp"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:text="KSH"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:textSize="30sp"
                        android:layout_marginLeft="3dp"
                        android:gravity="right"
                        android:text="45,293"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/black_stroke">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/unread_messages"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="5dp"
                    android:gravity="right"
                    android:textSize="18sp"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/unread_messages"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:textSize="30sp"
                        android:gravity="right"
                        android:text="78"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/black_stroke">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/paying_tenants"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="5dp"

                    android:textSize="18sp"
                    android:gravity="right"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/paying_tenants"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:textSize="30sp"
                        android:gravity="right"
                        android:text="78"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="OF"/>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:textSize="30sp"
                        android:gravity="right"
                        android:text="78"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:paddingTop="20dp"
                android:id="@+id/add_landlord"
                android:layout_height="wrap_content"
                android:src="@drawable/add_landlord"/>
            <View
                android:layout_width="3dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/black"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/add_tenant"
                android:layout_height="wrap_content"
                android:src="@drawable/add_tenant"/>
        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>